# helium-ledger-app

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  Vagrantfile  config.min  docker-make  host.mk  install-template.sh  load-template.sh  prepare-devenv.sh  requirements.txt  sonar-project.properties  udev.sh
.cargo/: config
.github/workflows/: ci-workflow.yml  ci.yml  lint-workflow.yml  rust.yml  sonarcloud.yml
bolos/: Makefile  README.md
bolos/src/: get_version.c  glyphs.h  helium.c  main.c  sign_payment_txn.c  ux.h
companion-app/: Cargo.toml  README.md
companion-app/src/: error.rs  hnt.rs  ledger_api.rs  main.rs  payment_txn.rs  pubkeybin.rs
companion-app/src/txns/: balance.rs  mod.rs  pay.rs  serializer.rs
companion-app/src/txns/validator/: mod.rs  stake.rs  transfer.rs  unstake.rs
doc/: api.asc  api.md  fuzzing.md
examples/: example-sign.js
fuzzing/: .gitignore  CMakeLists.txt  build.sh  coverage.sh  fuzz_message.c  run.sh
fuzzing/corpus/: create_nonce_account.raw  create_nonce_account_with_seed.raw  create_stake_account.raw  create_stake_account_and_delegate.raw  create_stake_account_no_lockup.raw  create_vote_account.raw  create_vote_account_with_seed.raw  nonce_withdraw.raw  nonced_stake_create_with_seed.raw  spl_associated_token_create.raw  spl_associated_token_create_with_transfer.raw  spl_associated_token_create_with_transfer_and_assert_owner.raw  spl_token_approve.raw  spl_token_burn.raw  spl_token_close_account.raw  spl_token_create_account.raw  spl_token_create_account2.raw  spl_token_create_multisig.raw  spl_token_create_token.raw  spl_token_freeze_account.raw  spl_token_mint_to.raw  spl_token_revoke.raw  spl_token_set_authority.raw  spl_token_thaw_account.raw  spl_token_transfer.raw  stake_authorize_both.raw  stake_authorize_staker.raw  stake_authorize_withdrawer.raw  stake_authorize_withdrawer_with_custodian.raw  stake_deactivate.raw  stake_delegate.raw  stake_delegate_with_nonce.raw  stake_merge.raw  stake_set_lockup.raw  stake_split_with_nonce_v1_1.raw  stake_split_with_nonce_v1_2.raw  stake_split_with_seed_v1_1.raw  stake_split_with_seed_v1_2.raw  stake_withdraw.raw  system_nonce_authorize.raw  (+7 more)
libsol/: Makefile  apdu_buffer.c  common_byte_strings.h  instruction.c  instruction.h  instruction_test.c  message.c  message_test.c  os_error.h  parser.c  parser.h  parser_test.c  print_config.c  print_config_test.c  printer.c  printer.h  printer_test.c  rfc3339.c  rfc3339.h  rfc3339_test.c  serum_assert_owner_instruction.c  serum_assert_owner_instruction.h  serum_assert_owner_instruction_test.c  spl_associated_token_account_instruction.c  spl_associated_token_account_instruction.h  spl_memo_instruction.c  spl_memo_instruction.h  spl_token_instruction.c  spl_token_instruction.h  spl_token_instruction_test.c  stake_instruction.c  stake_instruction.h  stake_instruction_test.c  system_instruction.c  system_instruction.h  system_instruction_test.c  token_info.c  token_info.h  transaction_printers.c  transaction_printers.h  (+6 more)
rust-tests/: Cargo.toml
rust-tests/src/: lib.rs
src/: apdu.c  apdu.h  derivation_path.c  derivation_path.h  getAddress.c  getAddress.h  getPubkey.c  getPubkey.h  get_public_key.c  get_public_key_nanox.c  get_version.c  globals.c  globals.h  glyphs.c  helium.c  helium.h  helium_ux.h  main.c  menu.c  menu.h  parseMessage.c  parseMessage.h  parseMessageTest.c  parser.c  parser.h  parserTest.c  save_context.c  save_context.h  signMessage.c  signMessage.h  signOffchainMessage.c  signOffchainMessage.h  sign_payment_txn.c  sign_payment_txn_nanox.c  systemInstruction.c  systemInstructionTest.c  utils.c  utils.h  ux.h
src/nanopb/: pb.h  pb_decode.c  pb_encode.c
src/proto/: blockchain_gossip_handler.pb.h  blockchain_ledger_entry_v2.pb.c  blockchain_ledger_entry_v2.pb.h  blockchain_ledger_subnetwork_v1.pb.c  blockchain_ledger_subnetwork_v1.pb.h  blockchain_poc_core_v1.pb.c  blockchain_poc_core_v1.pb.h  blockchain_region_param_v1.pb.c  blockchain_region_param_v1.pb.h  blockchain_routing_address.pb.c  blockchain_routing_address.pb.h  blockchain_snapshot_handler.pb.h  blockchain_state_channel_v1.pb.c  blockchain_state_channel_v1.pb.h  blockchain_sync_handler.pb.c  blockchain_sync_handler.pb.h  blockchain_token_type_v1.pb.c  blockchain_token_type_v1.pb.h  blockchain_txn.pb.h  blockchain_txn_add_gateway_v1.pb.c  blockchain_txn_add_subnetwork_v1.pb.c  blockchain_txn_add_subnetwork_v1.pb.h  blockchain_txn_assert_location_v1.pb.h  blockchain_txn_assert_location_v2.pb.c  blockchain_txn_coinbase_v1.pb.c  blockchain_txn_coinbase_v1.pb.h  blockchain_txn_consensus_group_failure_v1.pb.c  blockchain_txn_consensus_group_v1.pb.h  blockchain_txn_gen_gateway_v1.pb.h  blockchain_txn_gen_price_oracle_v1.pb.c  blockchain_txn_gen_price_oracle_v1.pb.h  blockchain_txn_handler.pb.c  blockchain_txn_handler.pb.h  blockchain_txn_oui_v1.pb.c  blockchain_txn_oui_v1.pb.h  blockchain_txn_payment_v1.pb.c  blockchain_txn_payment_v2.pb.c  blockchain_txn_payment_v2.pb.h  blockchain_txn_poc_receipts_v1.pb.c  blockchain_txn_poc_receipts_v1.pb.h  (+40 more)
src/transactions/: blockchain_gossip_handler.pb.c  blockchain_snapshot_handler.pb.c  blockchain_state_channel_v1.pb.h  blockchain_txn.pb.c  blockchain_txn_add_gateway_v1.pb.h  blockchain_txn_assert_location_v1.pb.c  blockchain_txn_assert_location_v2.pb.h  blockchain_txn_coinbase_v1.pb.h  blockchain_txn_consensus_group_failure_v1.pb.h  blockchain_txn_consensus_group_v1.pb.c  blockchain_txn_create_htlc_v1.pb.c  blockchain_txn_payment_v1.pb.h  (+29 more)
tests/: Cargo.toml  README.md  test_example.py  test_pubkey.py  test_sign.py
tests/integration/: Cargo.toml  README.md
tests/integration/src/: main.rs  util.rs
tests/integration/src/test/: mod.rs  nanos.rs  nanox.rs  speculos.rs
tests/python/: conftest.py  requirements.txt  test_solana.py  utils.py
tests/python/apps/: solana.py  solana_cmd_builder.py  solana_utils.py
tests/src/: lib.rs  main.rs
tests/unit/: CMakeLists.txt  README.md  gen_coverage.sh  test_save_context.c
tests/unit-tests/: test_save_context.c
util/: active-target.sh  read-last-sdk
(+86 files in other folders)
