[package]
name = "helium-ledger-app"
version = "1.1.3-alpha"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
structopt = "0"
helium-api = "2"
helium-proto = { git = "https://github.com/helium/proto" }
prettytable-rs = "0"
ledger-transport-hid = { git = "https://github.com/helium/ledger-rs" }
ledger-apdu = { git = "https://github.com/helium/ledger-rs" }
bs58 = {version = "0", features=["check"]}
base64 = "0"
rust_decimal = "1"
prost = "0"
qr2term = "0"
tokio = {version = "1.2", features = ["full"]}
