[package]
name = "helium-ledger-app"
version = "1.1.4-alpha.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"
publish = false


[dependencies]
anyhow = "1.0"
thiserror = "1"
byteorder = "1"
structopt = "0"
helium-api = "2"
helium-crypto = {git = "https://github.com/helium/helium-crypto-rs", tag="v0.0.7"}
helium-wallet = { git = "https://github.com/helium/helium-wallet-rs" }
helium-proto = { git = "https://github.com/helium/proto", branch="master"}
prettytable-rs = "0"
ledger-transport-hid = { git = "https://github.com/helium/ledger-rs" }
ledger-apdu = { git = "https://github.com/helium/ledger-rs" }
bs58 = {version = "0", features=["check"]}
base64 = "0"
rust_decimal = "1"
prost = "0"
qr2term = "0"
tokio = {version = "1.2", features = ["full"]}
