[package]
name = "helium-ledger-app"
version = "2.0.0-rc2-alpha"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "1"
byteorder = "1"
structopt = "0"
helium-api = "2.0.4"
helium-wallet = { git = "https://github.com/helium/helium-wallet-rs", branch = "lthiery/add-memo-to-payments" }
helium-crypto = {git = "https://github.com/helium/helium-crypto-rs", tag="v0.0.7"}
helium-proto = { git = "https://github.com/helium/proto", branch="master"}
prettytable-rs = "0"
bs58 = {version = "0", features=["check"]}
base64 = "0"
rust_decimal = "1"
prost = "0"
qr2term = "0"
tokio = {version = "1.2", features = ["full"]}
[dependencies.ledger-transport]
git = "https://github.com/helium/ledger-rs"
branch = "lthiery/tcp-transport"
default-features = false
features = ["transport-hid", "transport-tcp"]
