[package]
name = "ledger-app-solana-tests"
version = "0.1.0"
description = "Ledger-app integration tests using Solana tools"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
hex = "0.4.1"
rand = "0.7.3"
solana-logger = "1.7.6"
solana-remote-wallet = "1.7.6"
solana-sdk = "1.7.6"
solana-stake-program = "1.7.6"
solana-vote-program = "1.7.6"
spl-associated-token-account = "1.0.2"
spl-memo = "3.0.1"
spl-token = "3.2.0"
