[package]
name = "ledger-app-solana-tests"
version = "0.2.0"
description = "Ledger-app integration tests using Solana tools"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[dependencies]
hex = "0.4.1"
rand = "0.7.3"
solana-logger = "1.11.6"
solana-remote-wallet = "1.11.6"
solana-sdk = "1.11.6"
solana-vote-program = "1.11.6"
spl-associated-token-account = "1.1.1"
spl-memo = "3.0.1"
spl-token = "3.5.0"
